# SD

./: Deskripsi Projek Teori.md  README.md
E-TAKZIR V1/database/: piket.txt  rute.txt  santri.txt
E-TAKZIR V1/src/: antarmuka_utama.cpp  antarmuka_utama.h  kelola_data_santri.cpp  kerangka_data.h  kumpulan_fungsi.h
E-TAKZIR V2/: CMakeLists.txt
E-TAKZIR V2/database/: rute.txt
E-TAKZIR V2/src/: antarmuka_utama.cpp  antarmuka_utama.h  baca_tulis_file.cpp  jadwal_dan_aturan.cpp  main.cpp  proses_pelanggaran.cpp
